--- a/gurk-manifest.yaml
+++ b/gurk-manifest.yaml
@@ -9,42 +9,28 @@ imports:
 options:
   setup: &setup_option
     conda/install-conda:
-      enabled: true
       args: ["--conda-conda-distribution", "miniconda"]
     conda/install-mamba:
-      enabled: true
       args: ["--conda-mamba-distribution", "micromamba"]
     docker/install-docker:
-      enabled: true
       args: ["--docker-additional-packages", "nvidia-container-toolkit", "devcontainers-cli"]
-    fzf/install-fzf:
-      enabled: true
-    fzf/install-loki-shell:
-      enabled: true
+    fzf/install-fzf: {}
+    fzf/install-loki-shell: {}
     gurk/configure-bashrc:
-      enabled: true
       config_file: config/configure_bashrc.bash
     gurk/configure-filestructure:
-      enabled: true
       config_file: config/configure_filestructure.yaml
     gurk/configure-pinned-apps:
-      enabled: true
       config_file: config/configure_pinned_apps.txt
     gurk/install-apt-packages:
-      enabled: true
       config_file: config/install_apt_packages.txt
     gurk/install-snap-packages:
-      enabled: true
       config_file: config/install_snap_packages.txt
     vscode/install-vscode-extensions:
-      enabled: true
       config_file: config/install_vscode_extensions.txt
     nvidia/install-nvidia-driver:
-      enabled: true
       args: ["--nvidia-driver-version", "recommended"]
   setdown:
-    fzf/uninstall-fzf:
-      enabled: true
-    fzf/uninstall-loki-shell:
-      enabled: true
+    fzf/uninstall-fzf: {}
+    fzf/uninstall-loki-shell: {}
   default: *setup_option
